--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-revise",
   "version": "0.1.0",
-  "homepage": "https://github.com/lingesh-sk/React-Hooks",
+  "homepage":"http://lingesh-sk.github.io/React-Hook",
+   
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
